--- a/my-app/src/Etextbook/Etextbook.module.css
+++ b/my-app/src/Etextbook/Etextbook.module.css
@@ -20,7 +20,7 @@
     height: 200px;
     border-radius: 15px;
 }
-.item__audio {
+.item__button{
     display: block;
     padding: 5px;
     border: none;
@@ -36,12 +36,12 @@
     margin: auto;
     text-align: center
 }
-.item__audio:hover {
+.item__button:hover {
     background: red;
 }
 .group__button {
     cursor: pointer;
-    width:40px;
+    width:100%;
     height: 40px;
     outline: none;
     border: none;
@@ -52,4 +52,11 @@
     width:30%;
     justify-content: space-between;
     margin-bottom: 30px;
+}
+.item__button:disabled {
+    background: gray;
+    color:lightgray
+}
+.word_item_hard {
+    background: lightcoral;
 }
