--- a/my-app/src/MainPage/Page.module.css
+++ b/my-app/src/MainPage/Page.module.css
@@ -13,6 +13,10 @@ body {
     width: 100%;
     padding: .5rem;
     margin: 0 auto;  
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .header {
     display: flex;
