--- a/my-app/src/Etextbook/Etextbook.module.css
+++ b/my-app/src/Etextbook/Etextbook.module.css
@@ -1,9 +1,31 @@
+.textbook__container {
+    background: seagreen;
+}
+.textbook__container_0 {
+    background: lightgreen;
+}
+.textbook__container_1 {
+    background: lightpink;
+}
+.textbook__container_2 {
+    background: lightseagreen
+}
+.textbook__container_3 {
+    background: lightgoldenrodyellow;
+}
+.textbook__container_4 {
+    background: lightcyan;
+}
+.textbook__container_5 {
+    background: lightseagreen;
+}
 .word_container {
+    padding: 3%;
     margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
-    column-gap: 60px;
-    row-gap: 15px;
+    column-gap: 12.25%;
+    row-gap: 25px;
 }
 .word_item {
     border:1px solid black;
@@ -46,6 +68,9 @@
     outline: none;
     border: none;
     border-radius: 25px;
+}
+.group__button_active {
+    background: lightgreen;
 }
 .group__container {
     display: flex;
