feat: add progress of learning and games links

--- a/my-app/src/Etextbook/Etextbook.module.css
+++ b/my-app/src/Etextbook/Etextbook.module.css
@@ -76,7 +76,7 @@
     display: flex;
     width:30%;
     justify-content: space-between;
-    margin-bottom: 30px;
+    margin:30px;
 }
 .item__button:disabled {
     background: gray;
