feat: add disabled style to game buttons

--- a/my-app/src/Etextbook/Components/Games/Games.module.css
+++ b/my-app/src/Etextbook/Components/Games/Games.module.css
@@ -34,10 +34,12 @@
     color: white;
     background-color: #1abc9c;
     text-decoration: none;
+    cursor: pointer;
 }
 .tile__button:disabled {
     background: lightslategray;
     color:lightgoldenrodyellow;
+    cursor: default;
 }
 .tile__container {
     width:50%;
