--- a/my-app/src/Stats/Stats.module.css
+++ b/my-app/src/Stats/Stats.module.css
@@ -20,3 +20,19 @@
     justify-content: center;
     column-gap: 75px;
 }
+.menu {
+    display: flex;
+    justify-content: center;
+    column-gap: 75px;
+}
+.menu__button {
+    outline: none;
+    border: 0;
+    background: #34495e;
+    color:white;
+    font-weight: bold;
+    padding:15px;
+}
+.menu__button_active {
+    background: #1abc9c;
+}
