--- a/my-app/src/MainPage/Page.module.css
+++ b/my-app/src/MainPage/Page.module.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     padding: .5rem;
     margin: 0 auto;  
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
