--- a/my-app/src/Stats/Stats.module.css
+++ b/my-app/src/Stats/Stats.module.css
@@ -1,3 +1,6 @@
+.container {
+    min-height: 90vh;
+}
 .user_info {
     width:30%;
     margin: auto;
@@ -24,6 +27,8 @@
     display: flex;
     justify-content: center;
     column-gap: 75px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 .menu__button {
     outline: none;
@@ -36,6 +41,24 @@
 .menu__button_active {
     background: #1abc9c;
 }
-.graph__container {
-    height:692px;
+.graphs__header {
+    margin-top: 50px;
+    text-align: center;
+}
+.graphs__menu {
+    margin:30px;
+    display: flex;
+    justify-content: space-around;
+}
+.graphs__button {
+    background: #34495e;
+    color: white;
+    border: none;
+    padding: 5px;
+}
+.graphs__button_active {
+    background: #1abc9c
+}
+.graphs__container {
+    margin-bottom: 20px;
 }
