--- a/my-app/src/MainPage/Page.module.css
+++ b/my-app/src/MainPage/Page.module.css
@@ -200,6 +200,9 @@ section {
     line-height: 23px;
     font-weight: 700;
 }
+.hide {
+   visibility: hidden;
+}
 .social {
     display: flex;
 }
