--- a/src/Etextbook/Components/Games/Games.module.css
+++ b/src/Etextbook/Components/Games/Games.module.css
@@ -7,6 +7,9 @@
     position: relative;
     text-align: center;
 }
+.tile a {
+    text-decoration: none;
+}
 .tile__img {
     max-width: 100%;
     height: 111px;
