--- a/src/SprintGame/appSprintGame/sprintStyle.css
+++ b/src/SprintGame/appSprintGame/sprintStyle.css
@@ -47,21 +47,23 @@
 }
 
 .sprint__false-button {
-  width: 90px;
+  width: 110px;
   border-radius: 6px;
   border: none;
   background-color: #fa7878;
   color: white;
   padding: 5px 5px;
+  position: relative;
 }
 
 .sprint__true-button {
-  width: 90px;
+  width: 110px;
   border-radius: 6px;
   border: none;
   background-color: #47be3c;
   color: white;
   padding: 5px 5px;
+  position: relative;
 }
 
 .sprint__wrapper {
@@ -114,4 +116,13 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
+}
+
+.sprint__key {
+  color: black;
+  position: absolute;
+  right: 6px;
+  bottom: 0px;
+  font-size: 12px;
+  color: rgb(61, 61, 61);
 }
